Removing all Xtend related stuff