@@ -2,63 +2,122 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.aniszczyk.minerva</groupId>
-		<artifactId>minerva-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-	</parent>
-
 	<!-- Tycho requires Maven 3 -->
 	<prerequisites>
 		<maven>3.0</maven>
 	</prerequisites>
 
 	<groupId>p2.osgi.bundle</groupId>
-	<artifactId>org.xtext.example.domainmodel.parent</artifactId>
+	<artifactId>org.eclipse.xtext.example.domainmodel.parent</artifactId>
 	<version>2.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>org.xtext.example.domainmodel - Parent</name>
+	<name>org.eclipse.xtext.example.domainmodel - Parent</name>
 
 	<properties>
 		<tycho-version>0.12.0</tycho-version>
+		<eclipse-site>http://download.eclipse.org/releases/${platform-version-name}</eclipse-site>
+		<orbit-site>http://download.eclipse.org/tools/orbit/downloads/drops/R20110523182458/repository</orbit-site>
 		<platform-version-name>indigo</platform-version-name>
 	</properties>
 
 	<modules>
 		<module>pom-runtime.xml</module>
-		<!-- <module>../org.eclipselabs.xtext.xtend2</module>  -->
+		<module>../org.eclipse.xtext.example.domainmodel.ui</module>
+		<module>../org.eclipse.xtext.example.domainmodel.tests</module>
 	</modules>
 	<build>
-		<!-- The src directory must be named as resource dir to put it on the build 
-			classpath. This is required to resolve the workflow module named in the .mwe2 
-			file -->
-		<!-- <resources> <resource> <directory>src</directory> </resource> </resources> -->
+		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>1.3</version>
-				<executions>
-					<execution>
-						<id>add-source</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>add-source</goal>
-						</goals>
-						<configuration>
-							<sources>
-								<source>src-gen</source>
-							</sources>
-							<sources>
-								<source>${project.build.directory}/xtend-gen</source>
-							</sources>
-						</configuration>
-					</execution>
-				</executions>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-maven-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<extensions>true</extensions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>target-platform-configuration</artifactId>
+				<version>${tycho-version}</version>
+				<configuration>
+					<resolver>p2</resolver>
+				</configuration>
 			</plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-compiler-plugin</artifactId>
+					<version>${tycho-version}</version>
+					<configuration>
+						<encoding>UTF-8</encoding>
+					</configuration>
+				</plugin>
+				<!-- enable source bundle generation -->
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-source-plugin</artifactId>
+					<version>${tycho-version}</version>
+					<executions>
+						<execution>
+							<id>plugin-source</id>
+							<goals>
+								<goal>plugin-source</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>2.4.1</version>
+					<configuration>
+						<encoding>ISO-8859-1</encoding>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-antrun-plugin</artifactId>
+					<version>1.3</version>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>findbugs-maven-plugin</artifactId>
+					<version>2.3.2</version>
+					<configuration>
+						<findbugsXmlOutput>true</findbugsXmlOutput>
+						<failOnError>false</failOnError>
+					</configuration>
+					<executions>
+						<execution>
+							<goals>
+								<goal>check</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>build-helper-maven-plugin</artifactId>
+					<version>1.3</version>
+					<executions>
+						<execution>
+							<id>add-source</id>
+							<phase>generate-sources</phase>
+							<goals>
+								<goal>add-source</goal>
+							</goals>
+							<configuration>
+								<sources>
+									<source>src-gen</source>
+								</sources>
+								<sources>
+									<source>${project.build.directory}/xtend-gen</source>
+								</sources>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-clean-plugin</artifactId>
@@ -68,18 +127,22 @@
 					<groupId>org.fornax.toolsupport</groupId>
 					<artifactId>fornax-oaw-m2-plugin</artifactId>
 					<version>3.2.3</version>
-					<!-- <configuration> <workflowEngine>mwe2</workflowEngine> <jvmSettings> 
-						<fork>true</fork> <jvmArgs> <jvmArg>-Xms100m</jvmArg> <jvmArg>-Xmx700m</jvmArg> 
-						<jvmArg>-XX:MaxPermSize=128m</jvmArg> </jvmArgs> </jvmSettings> </configuration> 
-						<executions> <execution> <phase>generate-sources</phase> <goals> <goal>run-workflow</goal> 
-						</goals> </execution> </executions> -->
 				</plugin>
-				<!-- <plugin> <groupId>org.eclipselabs.xtext.utils</groupId> <artifactId>xtext-maven-plugin</artifactId> 
-					<version>1.0.0-SNAPSHOT</version> <configuration> </configuration> <executions> 
-					<execution> <phase>process-sources</phase> </execution> </executions> </plugin> -->
 			</plugins>
 		</pluginManagement>
 	</build>
+	<repositories>
+		<repository>
+			<id>eclipse</id>
+			<layout>p2</layout>
+			<url>${eclipse-site}</url>
+		</repository>
+		<repository>
+			<id>orbit</id>
+			<layout>p2</layout>
+			<url>${orbit-site}</url>
+		</repository>
+	</repositories>
 	<pluginRepositories>
 		<!-- Fornax Workflow Runner plugin -->
 		<pluginRepository>
@@ -104,7 +167,22 @@
 		</pluginRepository>
 	</pluginRepositories>
 
-
+	<profiles>
+		<profile>
+			<id>platform-indigo</id>
+			<activation>
+				<property>
+					<name>platform-version-name</name>
+					<value>indigo</value>
+				</property>
+			</activation>
+			<properties>
+				<eclipse-site>http://download.eclipse.org/releases/indigo</eclipse-site>
+				<platform-version>[3.7,3.8)</platform-version>
+			</properties>
+		</profile>
+	</profiles>
+	
 	<licenses>
 		<license>
 			<name>Eclipse Public License v1.0</name>
